<resources>
    <string name="app_name">율전에서 살아남기</string>
    <string name="title_activity_secondhand_bulletin">중고거래게시판</string>
    <string name="title_activity_messageList">메세지함</string>
    <string name="title_activity_message">받은 메세지</string>
    <string name="title_activity_messageWriting">메세지 작성</string>

    <string-array name="category1">
        <item>가구</item>
        <item>전자기기</item>
        <item>책</item>
    </string-array>
    <string-array name="furniture">
        <item>책상</item>
        <item>책장</item>
        <item>옷장</item>
        <item>기타</item>
    </string-array>
    <string-array name="electronicEq">
        <item>선풍기</item>
        <item>난방기기</item>
        <item>스탠드</item>
        <item>기타</item>
    </string-array>
    <string-array name="book">
        <item>전공서적</item>
        <item>문학서적</item>
        <item>만화책</item>
    </string-array>
    <string-array name="condition">
        <item>새제품</item>
        <item>좋음</item>
        <item>사용감 있음</item>
        <item>골동품</item>
    </string-array>
    <string-array name="location">
        <item>학관</item>
        <item>후문</item>
        <item>쪽문</item>
        <item>북문</item>
        <item>반도체관</item>
    </string-array>
    <string name="category1">분류1</string>
    <string name="category2">분류2</string>
    <string name="price">가격</string>
    <string name="condition">상태</string>
    <string name="location">장소</string>
    <string name="memo">상세설명</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
